--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,20 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary">#4799cf</color>
+    <color name="secondary">#3775a4</color>
+    <color name="color_blue_3">#78cfff</color>
+    <color name="color_blue_4">#6cbae5</color>
+    <color name="color_blue_5">#0447b7</color>
+    <color name="color_blue_6">#048eff</color>
+
+
+    <color name="color_light_1">#dbdbdb</color>
+    <color name="color_light_2">#e4e4e2</color>
+    <color name="color_light_3">#a8d6da</color>
+
+    <color name="color_white_1">#ffffff</color>
+    <color name="color_white_2">#AEFFFFFF</color>
+    <color name="color_white_3">#737373</color>
 </resources>
